--- a/style.css
+++ b/style.css
@@ -1,76 +1,61 @@
-*{
-    margin: 0;
-    font-family: sans-serif;
+* {
+  margin: 0;
+  font-family: sans-serif;
 }
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    gap: 20px;
-    border-bottom: 1px solid black;
-    padding-left: 20px;
+.dropdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 200px;
+  flex-direction: column;
 }
-.right{
-    display: flex;
-    align-items: baseline;
-    padding: 20px;
-    gap: 20px;
+.dropdown-btn {
+  display: flex;
+  width: 170px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.link{
-    background: none;
-    border: none;
-    text-decoration: none;
-    color: #000000;
-    font-family: inherit;
-    font-size: inherit;
-    cursor: pointer;
-    padding: 0;
+.dropdown-arrow {
+  border-bottom: 2px solid #000;
+  border-right: 2px solid #000;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg) translateY(-50%);
+  transform-origin: right;
+  position: relative;
+  top: 10px;
+  left: 80px;
 }
-input{
-    width: 200px;
-    height: 25px;
+.link {
+  background: none;
+  border: none;
+  text-decoration: none;
+  color: #000000;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+}
+.link:hover {
+  text-decoration: underline;
+}
+.dropdown-options {
+  width: 170px;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
-.dropdown{
-    position: relative;
-}
-
-.dropdown-menu{
-    position: absolute;
-    right: 0;
-    top: calc(100% + .5rem);
-    background-color: white;
-    padding: .75rem;
-    box-shadow: 2px 2px 10px rgba(0,0,0,.4);
-    opacity: 0;
-    border-radius: .2em;
-    transform: translateY(-10px);
-    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
-    pointer-events: none;
-} 
-.signin-menu{
-    width: 170px;
-    display: flex;
-    flex-direction: column;
-    gap: 7px;
-}
-.signin-btn{
-    color: white;
-    background-color: black;
-    border: none;
-    border-radius: .2em;
-    padding: 10px 5px;
-    cursor: pointer;
-}
-.signin-btn:hover{
-    text-decoration: underline;
-}
-.dropdown.active > .link, 
-.link:hover{
-    text-decoration: underline;
-}
-.dropdown.active > .link + .dropdown-menu{
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: auto;
+.dropdown-active {
+  opacity: 1;
+  transition: opacity 0.3s ease;
 }
